--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ group = 'realmayus'
 version = '1.0.0'
 
 java {
-    archivesBaseName = 'aquatictorches'
+    archivesBaseName = 'aquatictorches-1.17'
     toolchain.languageVersion = JavaLanguageVersion.of(16)
 }
 
