--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 
 group = 'realmayus'
-version = '1.0.0'
+version = '1.1.0'
 
 java {
-    archivesBaseName = 'aquatictorches'
+    archivesBaseName = 'aquatictorches-1.18'
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
