--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@ out/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
+# Eclipse
+.settings/
+bin/
+.classpath
+*.launch
+.project
+
 # JIRA plugin
 atlassian-ide-plugin.xml
 
